--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "expo": "^44.0.0",
     "expo-status-bar": "~1.2.0",
     "native-base": "3.4.0",
+    "prop-types": "^15.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.33.0",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
