--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mynewapp",
+  "name": "native-base-basic",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "keywords": [
@@ -19,15 +19,18 @@
   "dependencies": {
     "expo": "^44.0.0",
     "expo-status-bar": "~1.2.0",
+    "i18next": "^21.8.11",
     "native-base": "3.4.0",
     "prop-types": "^15.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.33.0",
+    "react-i18next": "^11.17.4",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-localization": "~12.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
@@ -35,7 +38,7 @@
   "bugs": {
     "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
   },
-  "homepage": "https://github.com/GeekyAnts/nativebase-templates#readme",
-  "author": "Aditya Jamuar",
+  "homepage": "https://github.com/serobalino/native-base-basic#readme",
+  "author": "Sebastian Robalinor",
   "private": true
 }
