new: focus fields

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "myNewApp",
-    "slug": "myNewApp",
+    "name": "Native Base Basic",
+    "slug": "native-base-basic",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
