--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^44.0.0",
-    "expo-status-bar": "~1.2.0",
+    "expo": "^47.0.0",
+    "expo-status-bar": "~1.4.2",
     "i18next": "^21.8.11",
     "native-base": "3.4.0",
     "prop-types": "^15.8.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-hook-form": "^7.33.0",
     "react-i18next": "^11.17.4",
-    "react-native": "0.64.3",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
-    "expo-localization": "~12.0.0"
+    "react-native": "0.70.5",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.7",
+    "expo-localization": "~14.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "bugs": {
     "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
