--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "native-base-basic",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "keywords": [
     "react",
     "expo",
@@ -10,14 +9,14 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^47.0.0",
+    "expo": "~47.0.6",
     "expo-status-bar": "~1.4.2",
     "i18next": "^21.8.11",
     "native-base": "3.4.0",
@@ -30,7 +29,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
-    "expo-localization": "~14.0.0"
+    "expo-localization": "~14.0.0",
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
