--- a/ios/NativeBaseBasic/Info.plist
+++ b/ios/NativeBaseBasic/Info.plist
@@ -20,6 +20,8 @@
     <string>1.0.0</string>
     <key>CFBundleSignature</key>
     <string>????</string>
+    <key>NSBluetoothAlwaysUsageDescription</key>
+    <string>The app may frequently use bluetooth to transfer data to peers.</string>
     <key>CFBundleURLTypes</key>
     <array>
       <dict>
@@ -29,6 +31,10 @@
         </array>
       </dict>
     </array>
+    <key>UISupportedExternalAccessoryProtocols</key>
+      <array>
+        <string>com.apple.m1</string>
+      </array>
     <key>CFBundleVersion</key>
     <string>1</string>
     <key>LSRequiresIPhoneOS</key>
