--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "expo": "~47.0.6",
+    "expo-localization": "~14.0.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "i18next": "^21.8.11",
     "native-base": "3.4.0",
@@ -26,14 +28,16 @@
     "react-hook-form": "^7.33.0",
     "react-i18next": "^11.17.4",
     "react-native": "0.70.5",
+    "react-native-bluetooth-classic": "^1.60.0-rc.24",
     "react-native-safe-area-context": "4.4.1",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.7",
-    "expo-localization": "~14.0.0",
-    "expo-splash-screen": "~0.17.5"
+    "react-native-telematics": "^1.0.4",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "^7.19.3",
+    "lodash": "^4.17.21",
+    "react-native-ble-plx": "^2.0.3"
   },
   "bugs": {
     "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
